--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -30,6 +30,9 @@ android {
 }
 
 dependencies {
+    implementation project(Modules.data)
+    implementation project(Modules.domain)
+
     implementation Libraries.kotlin_stdlib
     implementation Libraries.anko_commons
 
