--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     implementation Libraries.kotlin_stdlib
     implementation Libraries.anko_commons
 
+    implementation 'info.hoang8f:android-segmented:1.0.6'
+
     implementation SupportLibraries.appcompat_v7
     implementation SupportLibraries.design
     implementation SupportLibraries.cardview_v7
